--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Ignore macOS system files
+.DS_Store
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -35,6 +38,9 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+
+# Ignore R history files
+.Rhistory
 
 # Unit test / coverage reports
 htmlcov/
@@ -54,6 +60,9 @@ cover/
 # Translations
 *.mo
 *.pot
+
+# Windows systems files
+Thumbs.db
 
 # Django stuff:
 *.log
